[gd_scene load_steps=26 format=3 uid="uid://c5dlwpbdc8ng5"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_ye7w4"]
[ext_resource type="Script" path="res://Enemy/Head.gd" id="3_fma0y"]
[ext_resource type="Script" path="res://Enemy/Body.gd" id="4_esmxa"]
[ext_resource type="Script" path="res://Enemy/LeftLeg.gd" id="5_ocuix"]
[ext_resource type="Script" path="res://Enemy/RightLeg.gd" id="6_ia3jp"]
[ext_resource type="Script" path="res://Enemy/RightArm.gd" id="7_3vtxw"]
[ext_resource type="Script" path="res://Enemy/LeftArm.gd" id="8_r643r"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ntpmp"]
radius = 0.400888
height = 2.21877

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wnrg4"]
albedo_color = Color(0.231373, 0.231373, 0.231373, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wxi38"]
albedo_color = Color(0.933333, 0.0745098, 0, 1)
metallic = 1.0
roughness = 0.29
emission_enabled = true
emission = Color(0.931742, 0.0750032, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o6mij"]
albedo_color = Color(0.104565, 0.248398, 1, 1)
metallic = 0.24
roughness = 0.0
emission_enabled = true
emission = Color(0.105882, 0.247059, 1, 1)
emission_energy_multiplier = 4.2

[sub_resource type="SphereMesh" id="SphereMesh_wqv2h"]
material = SubResource("StandardMaterial3D_o6mij")
radius = 0.02
height = 0.04

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_vu2s8"]
points = PackedVector3Array(0.037, 0, -0.813, 0.2, 0, -0.889, -0.518, 0, 0.598, 0.331, 0, 0.593, 5, 6, 2, -5, 6, 2, 5, 6, -2, -5, 6, -2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4w1pk"]
albedo_color = Color(0.203922, 0, 0.945098, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n6ygu"]
albedo_color = Color(0.432997, 0.00188923, 0.995624, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sl1db"]
albedo_color = Color(0.432997, 0.00188923, 0.995624, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t28yo"]
albedo_color = Color(0.432997, 0.00188923, 0.995624, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_haavb"]
albedo_color = Color(0.431373, 0, 0.996078, 1)

[sub_resource type="Animation" id="Animation_sxyqu"]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Form/RightArmRotator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-3.05037e-08, -0.51674, 2.1888), Vector3(-0.488207, 0.857059, 0.981622), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_plxge"]
resource_name = "Die"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Form/Head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(0, 4.71239, 0), Vector3(1.5708, -1.5708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Form/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.71774, 0), Vector3(0, 1.72236, 0), Vector3(-3.6566, -0.0779227, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Form/Body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.16415, 0), Vector3(0, 1.16415, 0), Vector3(1.58939, -0.0746058, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Form/Body:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, -1.5708)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Form/RightArmRotator:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.449, 0.332166), Vector3(0, 1.449, 0.332166), Vector3(0, 1.33152, 0.332166), Vector3(0, 0.399196, 0.332166), Vector3(0, -0.0655007, 0.908515)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Form/RightArmRotator:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(1.5708, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Form/LeftArmRotator:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.4631, -0.334152), Vector3(0, 1.4631, -0.334152), Vector3(0, 1.35231, -0.334152), Vector3(0, 0.425524, -0.334152), Vector3(0, -0.103456, -1.08)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Form/LeftArmRotator:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.9, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(-1.5708, 0, 0), Vector3(-1.70096, 0, 0), Vector3(-1.5568, 0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Form/LeftLegRotator:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.821006, -0.153385), Vector3(0, 0.821006, -0.153385), Vector3(-0.962281, -0.109753, -0.153385)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Form/LeftLegRotator:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 1.5708)]
}

[sub_resource type="Animation" id="Animation_qqf8e"]
resource_name = "Equip"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Form/RightArmRotator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 1.5708)]
}

[sub_resource type="Animation" id="Animation_ohuj4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Form/LeftLegRotator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Form/RightLegRotator:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Form/LeftArmRotator:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Form/RightArmRotator:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Form/Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.5708, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Form/Head:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.71774, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Form/Body:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.16415, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Form/Body:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Form/RightArmRotator:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.449, 0.332166)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Form/LeftArmRotator:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.4631, -0.334152)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Form/LeftLegRotator:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.821006, -0.153385)]
}

[sub_resource type="Animation" id="Animation_1wq20"]
resource_name = "walk"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Form/LeftLegRotator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.445984), Vector3(0, 0, -0.443314), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Form/RightLegRotator:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.438078), Vector3(0, 0, 0.446804), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Form/LeftArmRotator:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.376642), Vector3(0, 0, 0.492366)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Form/RightArmRotator:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.454379), Vector3(0, 0, -0.411762)]
}

[sub_resource type="Animation" id="Animation_3go4y"]
resource_name = "walk_equipped"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Form/RightArmRotator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 1.5708), Vector3(0, 0, 1.63391), Vector3(0, 0, 1.46519)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Form/RightLegRotator:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.456578), Vector3(0, 0, -0.324457), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Form/LeftLegRotator:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.347914), Vector3(0, 0, 0.480262), Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Form/LeftArmRotator:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.337547), Vector3(0, 0, -0.214484), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m4bc4"]
_data = {
"Attack": SubResource("Animation_sxyqu"),
"Die": SubResource("Animation_plxge"),
"Equip": SubResource("Animation_qqf8e"),
"RESET": SubResource("Animation_ohuj4"),
"walk": SubResource("Animation_1wq20"),
"walk_equipped": SubResource("Animation_3go4y")
}

[node name="Enemy" type="CharacterBody3D" groups=["EnemyNav", "Persist"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
collision_layer = 16
collision_mask = 101
script = ExtResource("1_ye7w4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10658, 0)
shape = SubResource("CapsuleShape3D_ntpmp")

[node name="HealthText" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.72536e-09, 2.24613, 0.153858)
text = "Health: "

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 6.476
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
one_shot = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.5

[node name="FireTimer" type="Timer" parent="."]
wait_time = 2.419
one_shot = true

[node name="Form" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.263098, 0)

[node name="Head" type="CSGBox3D" parent="Form" groups=["Enemy"]]
transform = Transform3D(-3.61999e-06, 0, -1, 0, 1, 0, 1, 0, -3.61999e-06, 0, 1.71774, 0)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.3, 0.3, 0.3)
material = SubResource("StandardMaterial3D_wnrg4")
script = ExtResource("3_fma0y")

[node name="Eye" type="CSGSphere3D" parent="Form/Head"]
transform = Transform3D(1, -4.37114e-08, -4.37114e-08, 4.37114e-08, -4.37114e-08, 1, -4.37114e-08, -1, -4.37114e-08, -0.0306576, 0, -0.139995)
radius = 0.0568933
material = SubResource("StandardMaterial3D_wxi38")

[node name="Eyeball" type="MeshInstance3D" parent="Form/Head/Eye"]
transform = Transform3D(1, 0, 0, 0, 1, -8.35188e-23, 0, 0, 1, 0, 0.0434123, 0)
mesh = SubResource("SphereMesh_wqv2h")

[node name="BitchFinder" type="RayCast3D" parent="Form/Head"]
transform = Transform3D(-7.34108e-08, -4.86081e-09, 1, -0.0685899, 0.997645, 1.92835e-09, -0.997645, -0.0685899, -7.35137e-08, 0, -0.0210547, 0)
target_position = Vector3(10, 0, 0)
collision_mask = 3

[node name="DetectionCone" type="Area3D" parent="Form/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.76331, 0)
collision_layer = 0
collision_mask = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="Form/Head/DetectionCone"]
transform = Transform3D(1, -4.37114e-08, -4.37114e-08, 4.37114e-08, -4.37114e-08, 1, -4.37114e-08, -1, -4.37114e-08, -1.34068e-09, -0.0105288, -0.0306712)
shape = SubResource("ConvexPolygonShape3D_vu2s8")

[node name="Body" type="CSGBox3D" parent="Form" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16415, 0)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.382572, 0.807481, 0.45541)
material = SubResource("StandardMaterial3D_4w1pk")
script = ExtResource("4_esmxa")

[node name="LeftLegRotator" type="Node3D" parent="Form"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.821006, -0.153385)

[node name="LeftLeg" type="CSGBox3D" parent="Form/LeftLegRotator" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.552771, 0.0128016)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.2, 1, 0.2)
material = SubResource("StandardMaterial3D_n6ygu")
script = ExtResource("5_ocuix")

[node name="RightLegRotator" type="Node3D" parent="Form"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.774477, 0.16354)

[node name="RightLeg" type="CSGBox3D" parent="Form/RightLegRotator" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.506242, -0.0340455)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.2, 1, 0.2)
material = SubResource("StandardMaterial3D_sl1db")
script = ExtResource("6_ia3jp")

[node name="RightArmRotator" type="Node3D" parent="Form"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.449, 0.332166)

[node name="RightArm" type="CSGBox3D" parent="Form/RightArmRotator" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.309366, 0.000503629)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.2, 0.637738, 0.2)
material = SubResource("StandardMaterial3D_t28yo")
script = ExtResource("7_3vtxw")

[node name="LeftArmRotator" type="Node3D" parent="Form"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4631, -0.334152)

[node name="LeftArm" type="CSGBox3D" parent="Form/LeftArmRotator" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.33489, -0.00271657)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.2, 0.668884, 0.2)
material = SubResource("StandardMaterial3D_haavb")
script = ExtResource("8_r643r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m4bc4")
}

[connection signal="timeout" from="RespawnTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="path_changed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_path_changed"]
[connection signal="ow_fuck" from="Form/Head" to="." method="_on_head_ow_fuck"]
[connection signal="body_entered" from="Form/Head/DetectionCone" to="." method="_on_detection_cone_body_entered"]
[connection signal="body_exited" from="Form/Head/DetectionCone" to="." method="_on_detection_cone_body_exited"]
[connection signal="ow_fuck" from="Form/Body" to="." method="_on_body_ow_fuck"]
[connection signal="ow_fuck" from="Form/LeftLegRotator/LeftLeg" to="." method="_on_left_leg_ow_fuck"]
[connection signal="ow_fuck" from="Form/RightLegRotator/RightLeg" to="." method="_on_right_leg_ow_fuck"]
[connection signal="ow_fuck" from="Form/RightArmRotator/RightArm" to="." method="_on_right_arm_ow_fuck"]
[connection signal="ow_fuck" from="Form/LeftArmRotator/LeftArm" to="." method="_on_left_arm_ow_fuck"]
