[gd_scene load_steps=11 format=3 uid="uid://dngs351q5gt2u"]

[ext_resource type="Script" path="res://enemy.gd" id="1_ye7w4"]
[ext_resource type="Script" path="res://Form.gd" id="2_nmndi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5rgs0"]
radius = 0.400888
height = 2.21877

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4l62a"]
albedo_color = Color(0.231373, 0.231373, 0.231373, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tvfuk"]
albedo_color = Color(0.933333, 0.0745098, 0, 1)
metallic = 1.0
roughness = 0.29
emission_enabled = true
emission = Color(0.931742, 0.0750032, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cbjpj"]
albedo_color = Color(0.203922, 0, 0.945098, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_peim5"]
albedo_color = Color(0.432997, 0.00188923, 0.995624, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_62dhb"]
albedo_color = Color(0.432997, 0.00188923, 0.995624, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ha67c"]
albedo_color = Color(0.432997, 0.00188923, 0.995624, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hiw8b"]
albedo_color = Color(0.431373, 0, 0.996078, 1)

[node name="Enemy" type="CharacterBody3D" groups=["EnemyNav"]]
collision_layer = 16
collision_mask = 5
script = ExtResource("1_ye7w4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.897254, 0)
shape = SubResource("CapsuleShape3D_5rgs0")

[node name="HealthText" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.72536e-09, 2.24613, 0.153858)
text = "Health: "

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 6.476
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
one_shot = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.5

[node name="Eyes" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.192622, 1.69819, -0.00120971)

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.229
one_shot = true

[node name="Form" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.263098, 0)
script = ExtResource("2_nmndi")

[node name="Head" type="CSGBox3D" parent="Form" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.71774, 0)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.3, 0.3, 0.3)
material = SubResource("StandardMaterial3D_4l62a")

[node name="Eye" type="CSGSphere3D" parent="Form/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15415, 0, 0)
radius = 0.0568933
material = SubResource("StandardMaterial3D_tvfuk")

[node name="BitchFinder" type="RayCast3D" parent="Form/Head"]
transform = Transform3D(0.997645, 0.0685899, 0, -0.0685899, 0.997645, 0, 0, 0, 1, 0, -0.0210547, 0)
target_position = Vector3(10, 0, 0)
collision_mask = 3

[node name="Body" type="CSGBox3D" parent="Form" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16415, 0)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.382572, 0.807481, 0.45541)
material = SubResource("StandardMaterial3D_cbjpj")

[node name="RightArm" type="CSGBox3D" parent="Form" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03624, 0.33267)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.2, 1, 0.2)
material = SubResource("StandardMaterial3D_peim5")

[node name="RightLeg" type="CSGBox3D" parent="Form" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.268235, 0.129495)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.2, 1, 0.2)
material = SubResource("StandardMaterial3D_62dhb")

[node name="LeftLeg" type="CSGBox3D" parent="Form" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.268235, -0.140583)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.2, 1, 0.2)
material = SubResource("StandardMaterial3D_ha67c")

[node name="LeftArm" type="CSGBox3D" parent="Form" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03624, -0.336869)
use_collision = true
collision_layer = 128
collision_mask = 8
size = Vector3(0.2, 1, 0.2)
material = SubResource("StandardMaterial3D_hiw8b")

[connection signal="timeout" from="RespawnTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="path_changed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_path_changed"]
[connection signal="ow_fuck" from="Form" to="." method="_on_form_ow_fuck"]
